# ros_control_boilerplate

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  sim_hw_interface_plugin.xml
config/: controllers.yaml  rrbot_controllers.yaml
include/myrobot_ros_control/: myrobot_hardware_interface.h
include/ros_control_boilerplate/: combinable_generic_hw.h  combinable_generic_hw_adapter.h  combinable_generic_hw_adapter_impl.hpp  combinable_generic_hw_impl.hpp  combinable_generic_hw_interface.h  controller_state_to_csv.h  generic_hardware_control_loop.h  generic_hardware_interface.h  generic_hw_control_loop.h  generic_hw_interface.h  joystick_manual_control.h  sim_hw_interface.h
include/ros_control_boilerplate/tools/: controller_to_csv.h  csv_to_controller.h  joystick_manual_control.h
launch/: myrobot_hardware.launch  myrobot_test_trajectory.launch  rrbot_hardware.launch  rrbot_simulation.launch  rrbot_test_trajectory.launch  rrbot_visualize.launch
ros_control_boilerplate/: CMakeLists.txt  package.xml
ros_control_boilerplate/include/ros_control_boilerplate/: generic_hw_interface.h  sim_hw_interface.h
ros_control_boilerplate/scripts/: analyze_trajectory.m
ros_control_boilerplate/src/: sim_hw_interface.cpp
ros_control_boilerplate/src/tools/: controller_to_csv_main.cpp
rrbot_control/: CMakeLists.txt  package.xml
rrbot_control/config/: control_loop.yaml  rrbot_combined_robot_hardware.yaml  rrbot_controllers.yaml  rrbot_robot_hardware.yaml
rrbot_control/include/rrbot_control/: rrbot_hw_interface.h
rrbot_control/launch/: rrbot_combined_simulation.launch  rrbot_hardware.launch  rrbot_simulation.launch  rrbot_test_trajectory.launch  rrbot_visualize.launch
rrbot_control/src/: rrbot_combined_hw_main.cpp  rrbot_hw_interface.cpp  rrbot_hw_main.cpp
rrbot_control_boilerplate/: CMakeLists.txt  package.xml
rrbot_control_boilerplate/include/rrbot_control_boilerplate/: rrbot_hw_interface.h
rrbot_control_boilerplate/launch/: rrbot_hardware.launch  rrbot_simulation.launch  rrbot_test_trajectory.launch
rrbot_control_boilerplate/src/: rrbot_hw_interface.cpp  rrbot_hw_main.cpp
scripts/: analyze_trajectory.m  analyze_trajectory.m~
src/: combinable_generic_hw_interface.cpp  controller_state_to_csv.cpp  csv_to_controller.cpp  generic_hardware_control_loop.cpp  generic_hardware_interface.cpp  generic_hardware_main.cpp  generic_hw_control_loop.cpp  generic_hw_interface.cpp  myrobot_hardware_interface.cpp  myrobot_node.cpp  myrobot_test_trajectory.cpp  sim_hw_interface.cpp  sim_hw_main.cpp  test_trajectory.cpp
src/tools/: controller_to_csv.cpp  controller_to_csv_main.cpp  csv_to_controller.cpp  csv_to_controller_main.cpp  keyboard_teleop.cpp  test_trajectory.cpp
